fix: overflow bug (#6724)
## Description

Fix overflow bug on mobile

## Type of Change

- [x] Bug fix (non-breaking change that fixes an issue)
- [ ] New feature (non-breaking change that adds functionality)
- [ ] Breaking change (fix or feature that would cause existing
functionality to change)
- [ ] Documentation update
- [ ] Code refactoring
- [ ] Performance improvement
- [ ] Test update

## Checklist

- [x] I have made corresponding changes to the documentation (if
applicable)
- [ ] I have added tests that prove my fix is effective or that my
feature works

--- a/docs/src/app/globals.css
+++ b/docs/src/app/globals.css
@@ -421,10 +421,6 @@ pre code.nextra-code:not([class*="twoslash-"]) > span[data-highlighted-line] {
   }
 }
 
-.nextra-code {
-  white-space: nowrap;
-}
-
 .nextra-code > span {
   white-space-collapse: preserve;
 }
